@startuml Paquete - Retiros

' Configuración
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam groupInheritance 2
hide circle
skinparam shadowing false

title Paquete: Retiros

' ============================================
' CLASES DEL PAQUETE
' ============================================

class Retiro {
  +idRetiro: int
  +idEstudiante: int
  +idIe: int
  +idGradoSeccion: int
  +fecha: DateTime
  +hora: DateTime
  +idTipoRetiro: int
  +origen: string
  +reportadoPorDocente: int
  +apoderadoContactado: int
  +horaContacto: DateTime
  +medioContacto: string
  +apoderadoQueRetira: int
  +dniVerificado: string
  +verificadoPor: int
  +idEstadoRetiro: int
  +observaciones: string
  +createdAt: DateTime
  +updatedAt: DateTime
  --
  +solicitar(): Retiro
  +actualizar(): void
  +eliminar(): void
  +reportar(docente: Docente): void
  +contactarApoderado(apoderado: Apoderado, medio: string): void
  +autorizar(apoderado: Apoderado): void
  +verificar(usuario: Usuario, dni: string): void
  +cambiarEstado(nuevoEstado: EstadoRetiro): void
  +completar(): void
  +cancelar(): void
}

class TipoRetiro {
  +idTipoRetiro: int
  +nombre: string
  --
  +crear(): TipoRetiro
  +actualizar(): void
  +eliminar(): void
  +listarTodos(): TipoRetiro[]
}

class EstadoRetiro {
  +idEstadoRetiro: int
  +codigo: string
  +nombre: string
  +orden: int
  +esFinal: boolean
  +createdAt: DateTime
  --
  +crear(): EstadoRetiro
  +actualizar(): void
  +eliminar(): void
  +listarTodos(): EstadoRetiro[]
  +obtenerSiguiente(): EstadoRetiro
}

class AutorizacionRetiro {
  +idAut: int
  +idEstudiante: int
  +idApoderado: int
  +vigenteDesde: DateTime
  +vigenteHasta: DateTime
  +observacion: string
  --
  +crear(): AutorizacionRetiro
  +actualizar(): void
  +eliminar(): void
  +estaVigente(fecha: DateTime): boolean
  +renovar(nuevaFecha: DateTime): void
}

' ============================================
' RELACIONES DEL PAQUETE
' ============================================

' Asociación: Clasificadores de Retiro
TipoRetiro -- Retiro
EstadoRetiro -- Retiro

note right of Retiro
  **Retiro de Estudiante**
  Proceso de retiro anticipado
  de un estudiante de la IE.
  
  **Flujo:**
  1. Solicitud (apoderado/docente)
  2. Contacto con apoderado
  3. Autorización del apoderado
  4. Verificación de identidad
  5. Entrega del estudiante
  
  **Orígenes:**
  - Solicitud apoderado
  - Emergencia médica
  - Reportado por docente
end note

note left of TipoRetiro
  **Tipos de Retiro:**
  - Programado
  - Emergencia médica
  - Emergencia familiar
  - Cita médica
  - Trámite personal
  - Otros
end note

note bottom of EstadoRetiro
  **Estados del Retiro:**
  1. Solicitado
  2. Contactando apoderado
  3. Apoderado contactado
  4. Autorizado
  5. En verificación
  6. Completado
  7. Cancelado
  
  Los estados tienen un orden
  secuencial definido.
end note

note top of AutorizacionRetiro
  **Autorización de Retiro**
  Define qué apoderados están
  autorizados para retirar a
  un estudiante específico.
  
  Incluye período de vigencia
  y puede ser renovada.
  
  Se verifica el DNI al momento
  del retiro.
end note

@enduml
